# Mel_Store

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  database_schema.md  plan_test.md  request.md  run_app.md
backend/: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  alembic.ini  clean_ollama.py  fix_embedding_model.py  migrate.py  pyproject.toml  requirements.txt  seed_all.py  seed_extra.py  seed_mel.py  seed_products.py  sync_ai_settings.py  sync_db.py  sync_users.py
backend/alembic/: env.py
backend/alembic/versions/: 20260426_0001_init_hybrid_search.py  20260426_0002_ai_settings.py  20260426_0003_studio_profile.py  20260426_0004_studio_profile_social_links.py  20260515_0015_bridge_existing_supabase_revision.py  20260516_0001_reconcile_studio_profile.py  20260516_0002_reconcile_product_price_per_day.py  20260516_0003_reconcile_orders_and_users.py
backend/app/: main.py
backend/app/api/: admin.py  auth.py  chat.py  orders.py
backend/app/core/: config.py
backend/app/db/: seed.py  session.py
backend/app/models/: models.py
backend/app/schemas/: admin.py  dto.py
backend/app/services/: admin_service.py  agent_runtime.py  booking.py  chat_models.py  embeddings.py  hybrid_search.py  model_catalog.py  policy_vector_store.py  system_prompt.py  telegram.py  vouchers.py
backend/app/tests/: test_admin_api.py  test_alembic_revisions.py  test_api_health.py  test_config.py  test_hybrid_helpers.py  test_product_schema_revisions.py  test_system_prompt_guardrails.py
frontend/: eslint.config.mjs  next.config.mjs  package-lock.json  package.json  (+2 more)
(+73 files in other folders)
